# open-verification-kernel

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  action.yml  pyproject.toml
docs/: ADAPTER_CONTRACT.md  AGENT_REPAIR_LOOP.md  ARCHITECTURE.md  ARTIFACTS.md  ARTIFACT_MANIFEST.md  ATTESTATION_ENVELOPE.md  ATTRIBUTABLE_PUBLICATION.md  AUTHORIZATION_INPUT_CONTRACT.md  AUTHORIZATION_OBLIGATION_RUNNER.md  BACKENDS.md  BENCHMARK.md  BRANCH_METADATA_COLLECTION.md  CONSUMER_VALIDATION_CHECKLIST.md  CONTRIBUTING.md  CURRENT_RELEASE_STATUS.md  CURRENT_WORK_ASSESSMENT.md  DEEP_AUDIT_2026-07-23_R2.md  ENGINEERING_HANDOFF.md  ENGINEERING_PROGRAM_2026-07-23_R2.md  EVIDENCE_INVARIANTS.md  EVIDENCE_QUALITY_REPORT.md  EXPERIMENTAL_PATHS.md  EXTERNAL_PILOT_PLAYBOOK.md  EXTERNAL_SMOKE_TEST.md  EXTERNAL_VALIDATION.md  FIRST_DEMO.md  FORMALPR_HOLDOUT_GOVERNANCE.md  FORMAL_SPEC.md  GITHUB_ACTION_WIRING.md  HOLDOUT_LABEL_SEPARATION.md  IMPLEMENTATION_STATUS.md  INFRASTRUCTURE_EXPOSURE_RUNNER.md  INFRASTRUCTURE_NORMALIZATION_HOOKS.md  INFRASTRUCTURE_POLICY_CONTRACT.md  INSTALLATION.md  INTEGRATION.md  LANES.md  LATEST_CODE_AUDIT.md  MIGRATION.md  PILOT_CASE_STUDIES.md  (+71 more)
ovk/: __init__.py  cli.py  mcp_sdk_transport.py  mcp_server.py  mcp_stdio.py  paths.py
schemas/: abstraction.coverage.schema.json  adoption.summary.schema.json  artifact.manifest.schema.json  attestation.envelope.schema.json  attestation.statement.schema.json  authorization.input.schema.json  backend.execution.schema.json  backend.routing.schema.json  ci_secrets.input.schema.json  deployment_state.input.schema.json  evidence.invariant_issue.schema.json  evidence.quality.schema.json  external.pilot.schema.json  external.pilots.registry.schema.json  formal_pr_bench.leaderboard.schema.json  holdout.aggregate_metrics.schema.json  infrastructure.input.schema.json  infrastructure.policy.schema.json  pilot.ledger.schema.json  pilot.metrics.schema.json  pilot.report.schema.json  preflight.report.schema.json  provenance.schema.json  release.layout.schema.json  self_protection.input.schema.json  verification.bundle.schema.json  verification.bundle.v2.schema.json  verification.capability.schema.json  verification.config.schema.json  verification.evidence.schema.json  verification.evidence.v2.schema.json  verification.evidence.v3.schema.json  verification.intent.schema.json  verification.manifest.schema.json  verification.obligation.schema.json  verification.result.schema.json
scripts/: __init__.py  _deprecation.py  build_template_conformance.py  check_command_surface.py  check_evidence_invariants.py  check_release_metadata.py  (+38 more)
(+656 files in other folders)
