[project]
name = "open-verification-kernel"
version = "0.0.1"
description = "Solver-agnostic verification kernel for AI-agent engineering workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Open Verification Kernel Contributors" }
]
dependencies = [
  "jsonschema>=4.22.0",
  "typer>=0.12.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0"
]
solvers = [
  "z3-solver>=4.13.0"
]
all = [
  "z3-solver>=4.13.0"
]

[project.scripts]
ovk = "ovk.cli:app"

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
